--- a/lab.html
+++ b/lab.html
@@ -286,6 +286,13 @@
 				<!-- Ongoing projects -->
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2023.03-2026.03
+					</div>
+					<p class="mb-0">과학기술정보통신부 중견연구자 지원사업</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
 						<h5>Samsung Advanced Institute of Technology, Republic of Korea</h5>
 						2022.12-2023.11
 					</div>
@@ -304,13 +311,6 @@
 						2022.03-current
 					</div>
 					<p class="mb-0">Google Cloud Platform Credit Award</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Intel Corp., USA</h5>
-						2022.03-2023.03
-					</div>
-					<p class="mb-0">High-fidelity 3D Reconstruction</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
@@ -350,18 +350,25 @@
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2020.03-2023.03
-					</div>
-					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
 						2020.02-current
 					</div>
 					<p class="mb-0">과학기술정보통신부, 인공지능대학원 지원사업 (POSTECH)</p>
 				</li>
 				<!-- Finished projects -->
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Intel Corp., USA</h5>
+						2022.03-2023.03
+					</div>
+					<p class="mb-0">High-fidelity 3D Reconstruction</p>
+				</li>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2020.03-2023.03
+					</div>
+					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
+				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>LG Electronics, Republic of Korea</h5>
