cvpr accepted papers & neurips area chair

--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,4 @@
-2023.02. <a href="publications.html#Kang_Scaling_CVPR_2023">Two <b>CVPR 2023</b> papers</a> got accepted.
+2023.02. Papers about <a href="publications.html#Kang_Scaling_CVPR_2023">GAN based text-to-image synthesis</a> and <a href="publications.html#Ryu_Instant_CVPR_2023">robust LiDAR perception</a> are accepted to <b>CVPR 2023</b>.
 2023.02. I will serve as an Area Chair for <b>NeurIPS 2023</b>.
 2023.01. One <b>ICRA 2023</b> paper and one <b>Scientific Reports</b> paper got accepted.
 2022.11. I will serve as an Area Chair for <b>ICCV 2023</b>.
