--- a/source/html/academic_activities.html
+++ b/source/html/academic_activities.html
@@ -5,6 +5,7 @@
 			<h2>Program Committee</h2>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
+					<mark>Area Chair</mark>, The Conf. on Neural Information Processing Systems (NeurIPS), 2023<br>
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2023<br>
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2023<br>
 					<mark>Associate Editor</mark>, Int. Conf. on Robotics and Automation (ICRA), 2023<br>
