minor fix for cvpr paper

--- a/publications.html
+++ b/publications.html
@@ -77,6 +77,8 @@
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
 			</p>
 			<p>
+				<a href="https://mingukkang.github.io/GigaGAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://mingukkang.github.io/GigaGAN/static/paper/gigagan_cvpr2023_compressed.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Scaling_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Kang_Scaling_CVPR_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kang_Scaling_CVPR_2023_bibtex_button">
