--- a/lab.html
+++ b/lab.html
@@ -102,8 +102,8 @@
 		<div class="col-md-3 text-center">
 			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
-			2021 Spring<br>
-			Master student
+			2023 Spring<br>
+			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
