--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2023.03. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.17.0"><b>Open3D v0.17</b></a> - Open3D meets Mitsuba. Receives 8.3+1.2k GitHub stars.
+				</li>
+				<li class="list-group-item">
 					2023.02. Papers about <a href="publications.html#Kang_Scaling_CVPR_2023">GAN based text-to-image synthesis</a> and <a href="publications.html#Ryu_Instant_CVPR_2023">robust LiDAR perception</a> are accepted to <b>CVPR 2023</b>.
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
 				</li>
-				<li class="list-group-item">
-					2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three <b>NeurIPS 2022</b> papers</a> and <a href="publications.html#Kim_SeLCA_NeurReps_2022">two NeurIPS workshop papers</a> got accepted.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three <b>NeurIPS 2022</b> papers</a> and <a href="publications.html#Kim_SeLCA_NeurReps_2022">two NeurIPS workshop papers</a> got accepted.
+					</li>
 					<li class="list-group-item">
 						2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
 					</li>
