--- a/publications.html
+++ b/publications.html
@@ -105,6 +105,7 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2303.14378" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ryu_Instant_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Ryu_Instant_CVPR_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Ryu_Instant_CVPR_2023_bibtex_button">
