--- a/publications.html
+++ b/publications.html
@@ -191,23 +191,23 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
-		<div class="col-lg-4 text-center" id="Cho_ContextAware_arXiv_2022">
+		<div class="col-lg-4 text-center" id="Cho_InstanceAware_arXiv_2022">
 			<img src="publications/data/22_context.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Context-Aware Image Completion</h4>
+			<h4>Instance-Aware Image Completion</h4>
 			<p class="text-muted">
 				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
 				<em>2210.12350 (arXiv), 2022</em>
 			</p>
 			<p>
 				<a href="http://arxiv.org/abs/2210.12350" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_ContextAware_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Cho_ContextAware_arXiv_2022_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_InstanceAware_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Cho_InstanceAware_arXiv_2022_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Cho_ContextAware_arXiv_2022_bibtex_button">
+			<div class="collapse" id="Cho_InstanceAware_arXiv_2022_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Cho_ContextAware_arXiv_2022,<br>
-							Title={Context-Aware Image Completion},<br>
+							@article{Cho_InstanceAware_arXiv_2022,<br>
+							Title={Instance-Aware Image Completion},<br>
 							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
 							Journal={2210.12350 (arXiv)},<br>
 							Year={2022}<br>
