--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kim_Stable_ICML_2023">
+			<img src="publications/data/23_icml.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Stable and Consistent Prediction of 3D Characteristic Orientation via Invariant Residual Learning</h4>
+			<p class="text-muted">
+				Seungwook Kim, Chunghyun Park, Yoonwoo Jeong, <b>Jaesik Park</b>, and Minsu Cho.
+				<em>Int. Conf. on Machine Learning (<b>ICML</b>), 2023</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Stable_ICML_2023_bibtex_button" aria-expanded="false" aria-controls="Kim_Stable_ICML_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Stable_ICML_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_Stable_ICML_2023,<br>
+							Title={Stable and Consistent Prediction of 3D Characteristic Orientation via Invariant Residual Learning},<br>
+							Author={Seungwook Kim and Chunghyun Park and Yoonwoo Jeong and Jaesik Park and Minsu Cho},<br>
+							Booktitle={Proceedings of the Int. Conf. on Machine Learning (ICML)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kang_Scaling_CVPR_2023">
 			<img src="publications/data/23_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Scaling up GANs for Text-to-Image Synthesis</h4>
