--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
 					<p class="lead">Hello! I am an Associate Professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
-					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together.
+					I am looking for self-motivated students.
 					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 				</li>
 			</ul>
