--- a/publications.html
+++ b/publications.html
@@ -148,6 +148,32 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-lg-4 text-center" id="Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023">
+			<img src="publications/data/22_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Learning to Register Unbalanced Point Pairs</h4>
+			<p class="text-muted">
+				Kanghee Lee, Junha Lee, and <b>Jaesik Park</b>.
+				<em>3D Vision and Robotics <b>CVPR workshop</b>, 2023</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2207.04221" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023_bibtex_button" aria-expanded="false" aria-controls="Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023,<br>
+							Title={Learning to Register Unbalanced Point Pairs},<br>
+							Author={Kanghee Lee and Junha Lee and Jaesik Park},<br>
+							Journal={3D Vision and Robotics CVPR workshop},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Gao_Scenelevel_ICRA_2023">
 			<img src="publications/data/23_icra.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Scene-level Point Cloud Colorization with Semantic-and-Geometric-aware Networks</h4>
@@ -421,32 +447,6 @@
 							Title={Substructure-Atom Cross Attention for Molecular Representation Learning},<br>
 							Author={Jiye Kim and Seungbeom Lee and Dongwoo Kim and Sungsoo Ahn and Jaesik Park},<br>
 							Booktitle={Proceedings of the AI for Science: Progress and Promises (AI4Science) NeurIPS workshop},<br>
-							Year={2022}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Lee_Learning_arXiv_2022">
-			<img src="publications/data/22_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Learning to Register Unbalanced Point Pairs</h4>
-			<p class="text-muted">
-				Kanghee Lee, Junha Lee, and <b>Jaesik Park</b>.
-				<em>2207.04221 (arXiv), 2022</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2207.04221" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Learning_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Lee_Learning_arXiv_2022_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Lee_Learning_arXiv_2022_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Lee_Learning_arXiv_2022,<br>
-							Title={Learning to Register Unbalanced Point Pairs},<br>
-							Author={Kanghee Lee and Junha Lee and Jaesik Park},<br>
-							Journal={2207.04221 (arXiv)},<br>
 							Year={2022}<br>
 							}
 						</p>
