--- a/source/html/contact.html
+++ b/source/html/contact.html
@@ -24,9 +24,7 @@
 				<li class="list-group-item">
 					<h3>To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
-					2-1) Fill out <a href="https://forms.gle/xrQLcT1cefHZuaG67" target="_blank">this form</a>.<br>
-					2-2) Apply <a href="https://adm-g.postech.ac.kr/ENG/" target="_blank"> POSTECH graduate school</a>.<br>
-					3) Once approved, I will announce online/offline meeting schedule.</a>
+					2) I will announce online/offline meeting schedule.</a>
 				</li>
 			</ul>
 		</div>
