--- a/publications.html
+++ b/publications.html
@@ -163,10 +163,36 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023,<br>
+							@inproceedings{Lee_Learning_3D_Vision_and_Robotics_CVPR_workshop</b_2023,<br>
 							Title={Learning to Register Unbalanced Point Pairs},<br>
 							Author={Kanghee Lee and Junha Lee and Jaesik Park},<br>
-							Journal={3D Vision and Robotics CVPR workshop},<br>
+							Booktitle={Proceedings of the 3D Vision and Robotics CVPR workshop},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Cho_InstanceAware_AI4CC_2023">
+			<img src="publications/data/22_context.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Instance-Aware Image Completion</h4>
+			<p class="text-muted">
+				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
+				<em>AI for Content Creation Workshop (AI4CC) <b>CVPR workshop</b>, 2023</em>
+			</p>
+			<p>
+				<a href="http://arxiv.org/abs/2210.12350" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_InstanceAware_AI4CC_2023_bibtex_button" aria-expanded="false" aria-controls="Cho_InstanceAware_AI4CC_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Cho_InstanceAware_AI4CC_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Cho_InstanceAware_AI4CC_2023,<br>
+							Title={Instance-Aware Image Completion},<br>
+							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
+							Booktitle={Proceedings of the AI for Content Creation Workshop (AI4CC) CVPR workshop},<br>
 							Year={2023}<br>
 							}
 						</p>
@@ -242,32 +268,6 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
-		<div class="col-lg-4 text-center" id="Cho_InstanceAware_arXiv_2022">
-			<img src="publications/data/22_context.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Instance-Aware Image Completion</h4>
-			<p class="text-muted">
-				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
-				<em>2210.12350 (arXiv), 2022</em>
-			</p>
-			<p>
-				<a href="http://arxiv.org/abs/2210.12350" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_InstanceAware_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Cho_InstanceAware_arXiv_2022_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Cho_InstanceAware_arXiv_2022_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Cho_InstanceAware_arXiv_2022,<br>
-							Title={Instance-Aware Image Completion},<br>
-							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
-							Journal={2210.12350 (arXiv)},<br>
-							Year={2022}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="col-lg-4 text-center" id="Ahn_Sequential_arXiv_2022">
 			<img src="publications/data/22_brick.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Sequential Brick Assembly with Efficient Constraint Satisfaction</h4>
