minor fix & cv update

--- a/publications.html
+++ b/publications.html
@@ -179,7 +179,7 @@
 			<h4>Instance-Aware Image Completion</h4>
 			<p class="text-muted">
 				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
-				<em>AI for Content Creation Workshop (AI4CC) <b>CVPR workshop</b>, 2023</em>
+				<em>AI for Content Creation (AI4CC) <b>CVPR workshop</b>, 2023</em>
 			</p>
 			<p>
 				<a href="http://arxiv.org/abs/2210.12350" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -192,7 +192,7 @@
 							@inproceedings{Cho_InstanceAware_AI4CC_2023,<br>
 							Title={Instance-Aware Image Completion},<br>
 							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
-							Booktitle={Proceedings of the AI for Content Creation Workshop (AI4CC) CVPR workshop},<br>
+							Booktitle={Proceedings of the AI for Content Creation (AI4CC) CVPR workshop},<br>
 							Year={2023}<br>
 							}
 						</p>
