new arxiv papers

--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,84 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Shin_FillUp_arXiv_2023">
+			<img src="publications/data/23_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Fill-Up: Balancing Long-Tailed Data with Generative Models</h4>
+			<p class="text-muted">
+				Joonghyuk Shin, Minguk Kang, and <b>Jaesik Park</b>.
+				<em>xxxx.xxxxx (arXiv), 2023</em>
+			</p>
+			<p>
+				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_FillUp_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_FillUp_arXiv_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_FillUp_arXiv_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Shin_FillUp_arXiv_2023,<br>
+							Title={Fill-Up: Balancing Long-Tailed Data with Generative Models},<br>
+							Author={Joonghyuk Shin and Minguk Kang and Jaesik Park},<br>
+							Journal={xxxx.xxxxx (arXiv)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_Binary_arXiv_2023">
+			<img src="publications/data/23_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Binary Radiance Fields</h4>
+			<p class="text-muted">
+				Seungjoo Shin and <b>Jaesik Park</b>.
+				<em>xxxx.xxxxx (arXiv), 2023</em>
+			</p>
+			<p>
+				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Binary_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Binary_arXiv_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Binary_arXiv_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Shin_Binary_arXiv_2023,<br>
+							Title={Binary Radiance Fields},<br>
+							Author={Seungjoo Shin and Jaesik Park},<br>
+							Journal={xxxx.xxxxx (arXiv)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_RISCLIP_arXiv_2023">
+			<img src="publications/data/23_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>RISCLIP: Referring Image Segmentation Framework using CLIP</h4>
+			<p class="text-muted">
+				Seoyeon Kim, Minguk Kang, and <b>Jaesik Park</b>.
+				<em>xxxx.xxxxx (arXiv), 2023</em>
+			</p>
+			<p>
+				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_RISCLIP_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Kim_RISCLIP_arXiv_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_RISCLIP_arXiv_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_RISCLIP_arXiv_2023,<br>
+							Title={RISCLIP: Referring Image Segmentation Framework using CLIP},<br>
+							Author={Seoyeon Kim and Minguk Kang and Jaesik Park},<br>
+							Journal={xxxx.xxxxx (arXiv)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kim_Stable_ICML_2023">
 			<img src="publications/data/23_icml.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Stable and Consistent Prediction of 3D Characteristic Orientation via Invariant Residual Learning</h4>
