--- a/publications.html
+++ b/publications.html
@@ -74,10 +74,10 @@
 			<h4>Fill-Up: Balancing Long-Tailed Data with Generative Models</h4>
 			<p class="text-muted">
 				Joonghyuk Shin, Minguk Kang, and <b>Jaesik Park</b>.
-				<em>xxxx.xxxxx (arXiv), 2023</em>
+				<em>2306.07200 (arXiv), 2023</em>
 			</p>
 			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2306.07200" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_FillUp_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_FillUp_arXiv_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_FillUp_arXiv_2023_bibtex_button">
@@ -87,7 +87,7 @@
 							@article{Shin_FillUp_arXiv_2023,<br>
 							Title={Fill-Up: Balancing Long-Tailed Data with Generative Models},<br>
 							Author={Joonghyuk Shin and Minguk Kang and Jaesik Park},<br>
-							Journal={xxxx.xxxxx (arXiv)},<br>
+							Journal={2306.07200 (arXiv)},<br>
 							Year={2023}<br>
 							}
 						</p>
@@ -100,10 +100,10 @@
 			<h4>Binary Radiance Fields</h4>
 			<p class="text-muted">
 				Seungjoo Shin and <b>Jaesik Park</b>.
-				<em>xxxx.xxxxx (arXiv), 2023</em>
+				<em>2306.07581 (arXiv), 2023</em>
 			</p>
 			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2306.07581" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Binary_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Binary_arXiv_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Binary_arXiv_2023_bibtex_button">
@@ -113,7 +113,7 @@
 							@article{Shin_Binary_arXiv_2023,<br>
 							Title={Binary Radiance Fields},<br>
 							Author={Seungjoo Shin and Jaesik Park},<br>
-							Journal={xxxx.xxxxx (arXiv)},<br>
+							Journal={2306.07581 (arXiv)},<br>
 							Year={2023}<br>
 							}
 						</p>
