--- a/publications.html
+++ b/publications.html
@@ -127,10 +127,10 @@
 			<h4>RISCLIP: Referring Image Segmentation Framework using CLIP</h4>
 			<p class="text-muted">
 				Seoyeon Kim, Minguk Kang, and <b>Jaesik Park</b>.
-				<em>xxxx.xxxxx (arXiv), 2023</em>
+				<em>2306.08498 (arXiv), 2023</em>
 			</p>
 			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2306.08498" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_RISCLIP_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Kim_RISCLIP_arXiv_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_RISCLIP_arXiv_2023_bibtex_button">
@@ -140,7 +140,7 @@
 							@article{Kim_RISCLIP_arXiv_2023,<br>
 							Title={RISCLIP: Referring Image Segmentation Framework using CLIP},<br>
 							Author={Seoyeon Kim and Minguk Kang and Jaesik Park},<br>
-							Journal={xxxx.xxxxx (arXiv)},<br>
+							Journal={2306.08498 (arXiv)},<br>
 							Year={2023}<br>
 							}
 						</p>
