Major Change:: removing academic_activities and about_me

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3" href="https://jaesik.info"></a></li>
-				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/about_me">About me</a></li>
-				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/academic_activities">Academic activities</a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/publications">Publications</a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/lab">@POSTECH</a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/contact">Contact</a></li>
@@ -48,12 +46,14 @@
 			<img src="source/members/jaesik-park.jpg" class="shadow rounded-circle img-thumbnail">
 		</div>
 		<div class="col-lg-9">
-			<h1>Jaesik Park</h1>
+			<h2>Jaesik Park</h2>
+			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am an Associate Professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
-					I am looking for self-motivated students.
-					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am looking for self-motivated students. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+Jaesik Park is an Associate Professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a> in 2009, and he received his Master’s degree and Ph.D. degree from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a> in 2011 and 2015, respectively, supervised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Dr. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>. Before joining <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, He worked at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab. led by <a href="http://vladlen.info/" target="_blank">Vladlen Koltun</a> as a research scientist, and he co-created the <a href="http://open3d.org/" target="_blank">Open3D library</a>. His research interests include image synthesis, 3D reconstruction, scene understanding, and computer vision topics. He serves as a program committee at prestigious computer vision conferences, such as ICCV, CVPR, and ECCV.				</li>
+				<li class="list-group-item">
+					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
 				</li>
 			</ul>
 			<h2>News</h2>
