--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -8,12 +8,15 @@
 			<img src="source/members/jaesik-park.jpg" class="shadow rounded-circle img-thumbnail">
 		</div>
 		<div class="col-lg-9">
-			<h1>Jaesik Park</h1>
+			<h2>Jaesik Park</h2>
+			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am an Associate Professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
-					I am looking for self-motivated students.
-					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am looking for self-motivated students. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<!-- AUTOGEN::Bio -->
+				</li>
+				<li class="list-group-item">
+					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
 				</li>
 			</ul>
 			<h2>News</h2>
