--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -12,7 +12,7 @@
 			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am looking for self-motivated students. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 					<!-- AUTOGEN::Bio -->
 				</li>
 				<li class="list-group-item">
