--- a/lab.html
+++ b/lab.html
@@ -224,224 +224,7 @@
 			Selected as the best undergraduate research participation (최우수 연구참여 II) 2022.12<br>
 		</div>		
 	</div>
-</div>
-<div class="container mt-4">
-	<div class="row gx-4 gy-4">
-		<div class="col-lg-6 text-start">
-			<h3>Teaching</h3>
-			<ul class="list-group shadow-sm">
-				<li class="list-group-item">
-					<h5>2023 Spring</h5>
-					[CSED233] Data Structure<br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2022 Fall</h5>
-					[AIGS101] Artifical Intelligence Basis II*<br>
-					[CSED291] Self-Enlightenment for Com. Scientists<br>
-					[CSED703F] 3D Vision<br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2022 Spring</h5>
-					[AIGS101] Artifical Intelligence Basis I*<br>
-					[CSED233] Data Structure<br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2021 Fall</h5>
-					[AIGS101] Artifical Intelligence Basis II*<br>
-					[CSED100] Introduction to Computer Science Engineering*<br>
-					[CSED703F] 3D Vision<br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2021 Spring</h5>
-					[AIGS101] Artifical Intelligence Basis I*<br>
-					[CSED538/AIGS538] Deep learning - <mark>Awarded as the best EduTech class by POSTECH</mark><br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2020 Fall</h5>
-					[AIGS101] Artifical Intelligence Basis II*<br>
-					[CSED100] Introduction to Computer Science Engineering*<br>
-					[CSED703F] 3D Vision<br>
-					[CSED800/AIGS800] CSE/GSAI Colloquium**<br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2020 Spring</h5>
-					[AIGS101] Artifical Intelligence Basis I*<br>
-					[AIGS537/CSED537] Artificial Intelligence & Data Science*<br>
-					[CSED233] Data Structure - <mark>Awarded as the outstanding online class by POSTECH</mark><br>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<h5>2019 Fall</h5>
-					[CSED703F-01] 3D Vision<br>
-				</li>
-				<li class="list-group-item">
-					Note: *Participated part of lectures, **Organized and managed lectures<br>
-				</li>
-			</ul>
-		</div>
-		<div class="col-lg-6 text-start">
-			<h3>Funding</h3>
-			<ul class="list-group shadow-sm">
-				<!-- Ongoing projects -->
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2023.03-2026.03
-					</div>
-					<p class="mb-0">과학기술정보통신부 중견연구자 지원사업</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Samsung Advanced Institute of Technology, Republic of Korea</h5>
-						2022.12-2023.11
-					</div>
-					<p class="mb-0">Efficient Neural Radiance Field</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2022.04-2026.12
-					</div>
-					<p class="mb-0">Multi-layered Visual Common Sense</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Google LLC, USA</h5>
-						2022.03-current
-					</div>
-					<p class="mb-0">Google Cloud Platform Credit Award</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Qualcomm, USA</h5>
-						2022.07-2023.06
-					</div>
-					<p class="mb-0">Discovering visual common sense</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2021.09-current
-					</div>
-					<p class="mb-0">과학기술정보통신부, 인공지능혁신허브 연구개발</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Culture, Sports and Tourism, Republic of Korea</h5>
-						2021.06-2023.12
-					</div>
-					<p class="mb-0">문화체육관광부, 포스텍-한예종 문화기술선도대학원</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2021.05-2024.05
-					</div>
-					<p class="mb-0">과학기술정보통신부, 시각적 상식에 기반한 영상 인페인팅</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Samsung Electronics Corp.</h5>
-						2021.05-2023.07
-					</div>
-					<p class="mb-0">Camera localization</p>
-				</li>				
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2020.02-current
-					</div>
-					<p class="mb-0">과학기술정보통신부, 인공지능대학원 지원사업 (POSTECH)</p>
-				</li>
-				<!-- Finished projects -->
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Intel Corp., USA</h5>
-						2022.03-2023.03
-					</div>
-					<p class="mb-0">High-fidelity 3D Reconstruction</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
-						2020.03-2023.03
-					</div>
-					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>LG Electronics, Republic of Korea</h5>
-						2022.06-2022.12
-					</div>
-					<p class="mb-0">3D Perception for Intelligent Robots</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Osstem Implant, Republic of Korea</h5>
-						2022.03-2022.07
-					</div>
-					<p class="mb-0">3D reconstruction system</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>POSTECH, Republic of Korea</h5>
-						2019.04-2022.02
-					</div>
-					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Intel Corp., USA</h5>
-						2020.04-2022.02
-					</div>
-					<p class="mb-0">Team Open3D. Contributed Nearest Neighbor Module</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Osstem Implant, Republic of Korea</h5>
-						2021.07-2021.12
-					</div>
-					<p class="mb-0">High-quality 3D reconstruction</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Select Star, Republic of Korea</h5>
-						2021.03-2021.11
-					</div>
-					<p class="mb-0">InstaOrder dataset collection</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Qualcomm Corp., USA</h5>
-						2019.10-2021.10
-					</div>
-					<p class="mb-0">Geometric perception from videos and images</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Hyundai Motor Group</h5>
-						2021.03-2021.09
-					</div>
-					<p class="mb-0">LiDAR data augmentation</p>
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Microsoft Reserach Asia</h5>
-						2020.06-2021.06
-					</div>
-					<p class="mb-0">3D content creation</p>					
-				</li>
-				<li class="list-group-item list-group-item-light">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>ETRI, Republic of Korea</h5>
-						2020.03-2020.10
-					</div>
-					<p class="mb-0">3D human capturing system</p>
-				</li>
-			</ul>
-		</div>
-	</div>
-</div> 
-<!-- Footer -->
+</div><!-- Footer -->
 <footer>
 		<div class="container">
 				<div class="row">
