cvpr 2024 area chair

--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
 2023.04. A paper about recovering <a href="publications.html#Kim_Stable_ICML_2023">3D characteristic orientation</a> is accepted to <b>ICML 2023</b>.
 2023.03. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.17.0"><b>Open3D v0.17</b></a> - Open3D meets Mitsuba. Receives 8.3+1.2k GitHub stars.
