--- a/publications.html
+++ b/publications.html
@@ -154,6 +154,7 @@
 				<em>Int. Conf. on Machine Learning (<b>ICML</b>), 2023</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2306.11406" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Stable_ICML_2023_bibtex_button" aria-expanded="false" aria-controls="Kim_Stable_ICML_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Stable_ICML_2023_bibtex_button">
