--- a/publications/multiviewps/index.html
+++ b/publications/multiviewps/index.html
@@ -83,6 +83,7 @@
 							Title={Robust Multiview Photometric Stereo using Planar Mesh Parameterization},<br>
 							Author={Jaesik Park and Sudipta N. Sinha and Yasuyuki Matsushita and Yu-Wing Tai and In So Kweon},<br>
 							Journal={IEEE Transactions of Pattern Analysis and Machine Intelligence (TPAMI)},<br>
+							Year={2016}<br>
 							}
 						</p>
 					</div>
