--- a/lab.html
+++ b/lab.html
@@ -72,7 +72,7 @@
 </div>
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3>Graduate Students</h3>
+		<h3>Members</h3>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
