New member Jaesung

--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -28,7 +28,13 @@
 </div>
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3>Graduate Students</h3>
+		<h3>Members</h3>
+		<div class="col-md-3 text-center">
+			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jaesung Choe</h5>
+			Postdoctoral researcher<br>
+			Ph.D. KAIST
+		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
@@ -105,7 +111,7 @@
 </div>
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<h3>Alumni</h3>
+		<h3>Past members</h3>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinoh Cho</h5>
