--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2024</b>.
 2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
 2023.04. A paper about recovering <a href="publications.html#Kim_Stable_ICML_2023">3D characteristic orientation</a> is accepted to <b>ICML 2023</b>.
