--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Choe_Spacetime_ICCV_2023">
+			<img src="publications/data/23_iccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Spacetime Surface Regularization for Neural Scene Reconstruction</h4>
+			<p class="text-muted">
+				Jaesung Choe, Christopher Choy, <b>Jaesik Park</b>, In So Kweon, and Animashree Anandkumar.
+				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2023</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_Spacetime_ICCV_2023_bibtex_button" aria-expanded="false" aria-controls="Choe_Spacetime_ICCV_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Choe_Spacetime_ICCV_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Choe_Spacetime_ICCV_2023,<br>
+							Title={Spacetime Surface Regularization for Neural Scene Reconstruction},<br>
+							Author={Jaesung Choe and Christopher Choy and Jaesik Park and In So Kweon and Animashree Anandkumar},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_FillUp_arXiv_2023">
 			<img src="publications/data/23_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Fill-Up: Balancing Long-Tailed Data with Generative Models</h4>
@@ -323,6 +348,7 @@
 							Title={Deep 3D Reconstruction of Synchrotron X-ray Computed Tomography for Intact Lungs},<br>
 							Author={Seungjoo Shin and Min Woo Kim and Kyong Hwan Jin and Kwang Moo Yi and Yoshiki Kohmura and Tetsuya Ishikawa and Jung Ho Je and Jaesik Park},<br>
 							Journal={published by Nature Research (Scientific Reports)},<br>
+							Year={2023}<br>
 							}
 						</p>
 					</div>
@@ -772,6 +798,7 @@
 							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
 							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
 							Journal={ACM Transactions on Graphics (ToG)},<br>
+							Year={2022}<br>
 							}
 						</p>
 					</div>
@@ -841,6 +868,7 @@
 							Title={HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge},<br>
 							Author={Jae Shin Yoon and Zhixuan Yu and Jaesik Park and Hyun Soo Park},<br>
 							Journal={Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},<br>
+							Year={2021}<br>
 							}
 						</p>
 					</div>
@@ -1114,6 +1142,7 @@
 							Journal={published by Nature Research (Scientific Reports)},<br>
 							Volume={5194},<br>
 							Number={11},<br>
+							Year={2021}<br>
 							}
 						</p>
 					</div>
@@ -1424,6 +1453,7 @@
 							Volume={38},<br>
 							Number={7},<br>
 							Pages={697-705},<br>
+							Year={2019}<br>
 							}
 						</p>
 					</div>
@@ -1479,6 +1509,7 @@
 							Volume={41},<br>
 							Number={2},<br>
 							Pages={297-310},<br>
+							Year={2019}<br>
 							}
 						</p>
 					</div>
@@ -1686,6 +1717,7 @@
 							Volume={122},<br>
 							Number={1},<br>
 							Pages={1-16},<br>
+							Year={2017}<br>
 							}
 						</p>
 					</div>
@@ -1757,6 +1789,7 @@
 							Volume={39},<br>
 							Number={8},<br>
 							Pages={1591-1604},<br>
+							Year={2016}<br>
 							}
 						</p>
 					</div>
@@ -1899,6 +1932,7 @@
 							Volume={25},<br>
 							Number={8},<br>
 							Pages={3639-3654},<br>
+							Year={2016}<br>
 							}
 						</p>
 					</div>
@@ -2040,6 +2074,7 @@
 							Volume={23},<br>
 							Number={12},<br>
 							Pages={5559-5572},<br>
+							Year={2014}<br>
 							}
 						</p>
 					</div>
