update cvpr pdf links

--- a/publications.html
+++ b/publications.html
@@ -207,7 +207,7 @@
 			</p>
 			<p>
 				<a href="https://mingukkang.github.io/GigaGAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://mingukkang.github.io/GigaGAN/static/paper/gigagan_cvpr2023_compressed.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Kang_Scaling_Up_GANs_for_Text-to-Image_Synthesis_CVPR_2023_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Scaling_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Kang_Scaling_CVPR_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kang_Scaling_CVPR_2023_bibtex_button">
@@ -233,7 +233,7 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2303.14378" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Ryu_Instant_Domain_Augmentation_for_LiDAR_Semantic_Segmentation_CVPR_2023_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ryu_Instant_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Ryu_Instant_CVPR_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Ryu_Instant_CVPR_2023_bibtex_button">
