--- a/lab.html
+++ b/lab.html
@@ -27,8 +27,8 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3" href="https://jaesik.info"></a></li>
-				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/publications">Publications</a></li>
-				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link active py-3 px-0 px-lg-3" href="https://jaesik.info/lab">@POSTECH</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link active py-3 px-0 px-lg-3" href="https://jaesik.info/publications">Publications</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/lab">Lab</a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/contact">Contact</a></li>
 			</ul>
 		</div>
@@ -37,39 +37,12 @@
 
 <header class="masthead bg-primary text-white text-start">
 	<div class="container d-flex align-items-left flex-column">
-		<h1 class="text-uppercase mt-3">@POSTECH</h1>
+		<h1 class="text-uppercase mt-3">Lab</h1>
 	</div>
 </header>
 
 
 <!-- Source -->
-<div class="container mt-4">
-	<div class="row gx-4 gy-4">
-		<div class="col-lg-6">
-			<h3>About the University</h3>
-			<ul class="list-group shadow-sm">
-				<li class="list-group-item">
-					<h5><a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h5>					
-					3.3 to 1 Undergraduate students per faculty<br>
-					105% Scholarship recipient rate<br>
-					Annual educational expenditures of USD 74,900 per student
-				</li>
-				<li class="list-group-item mb-0">
-					<h5>Ranked <mark>third best small university in the world, first in Asia</mark></h5>
-					By the Times Higher Education (THE), 2019-2021
-				</li>
-				<li class="list-group-item mb-0">
-					<h5>Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark></h5>
-					By international news agency Reuters, 2019
-				</li>
-			</ul>
-		</div>
-		<div class="col-lg-6">
-			<h3>Computer Vision Lab.</h3>
-			<img src="source/members/lab.jpg" class="img-thumbnail shadow-sm">
-		</div>
-	</div>
-</div>
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Members</h3>
