--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -28,7 +28,7 @@
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3" href="https://jaesik.info"></a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link active py-3 px-0 px-lg-3" href="https://jaesik.info/publications">Publications</a></li>
-				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/lab">@POSTECH</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/lab">Lab</a></li>
 				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="https://jaesik.info/contact">Contact</a></li>
 			</ul>
 		</div>
