--- a/lab.html
+++ b/lab.html
@@ -124,6 +124,12 @@
 			2023 Spring<br>
 			Master student
 		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Daneul Kim</h5>
+			2023 Fall<br>
+			Master student
+		</div>
 	</div>
 </div>
 <div class="container mt-4">
