--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,34 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kang_StudioGAN_TPAMI_2023">
+			<img src="publications/data/22_studio_gan.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis</h4>
+			<p class="text-muted">
+				MinGuk Kang, Joonghyuk Shin, and <b>Jaesik Park</b>.
+				<em>Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2023</em>
+				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2206.09479" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_StudioGAN_TPAMI_2023_bibtex_button" aria-expanded="false" aria-controls="Kang_StudioGAN_TPAMI_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kang_StudioGAN_TPAMI_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kang_StudioGAN_TPAMI_2023,<br>
+							Title={StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis},<br>
+							Author={MinGuk Kang and Joonghyuk Shin and Jaesik Park},<br>
+							Journal={Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Choe_Spacetime_ICCV_2023">
 			<img src="publications/data/23_iccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Spacetime Surface Regularization for Neural Scene Reconstruction</h4>
@@ -85,32 +113,6 @@
 							Title={Spacetime Surface Regularization for Neural Scene Reconstruction},<br>
 							Author={Jaesung Choe and Christopher Choy and Jaesik Park and In So Kweon and Animashree Anandkumar},<br>
 							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
-							Year={2023}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Kumar_HighSpeed_RA-L_2023">
-			<img src="publications/data/23_ral.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>High-Speed Stereo Visual SLAM For Low-Powered Computing Devices</h4>
-			<p class="text-muted">
-				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
-				<em>IEEE Robotics and Automation Letters (<b>RA-L</b>), 2023</em>
-			</p>
-			<p>
-				<a href="https://github.com/ashishkumar822/Jetson-SLAM" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_HighSpeed_RA-L_2023_bibtex_button" aria-expanded="false" aria-controls="Kumar_HighSpeed_RA-L_2023_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kumar_HighSpeed_RA-L_2023_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kumar_HighSpeed_RA-L_2023,<br>
-							Title={High-Speed Stereo Visual SLAM For Low-Powered Computing Devices},<br>
-							Author={Ashish Kumar and Jaesik Park and Laxmidhar Behera},<br>
-							Journal={IEEE Robotics and Automation Letters (RA-L)},<br>
 							Year={2023}<br>
 							}
 						</p>
@@ -660,34 +662,6 @@
 							Title={CostDCNet: Cost Volume based Depth Completion for a Single RGB-D Image},<br>
 							Author={Jaewon Kam and Jungeon Kim and Soongjin Kim and Jaesik Park and Seungyong Lee},<br>
 							Booktitle={Proceedings of the European Conf. on Computer Vision (ECCV)},<br>
-							Year={2022}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Kang_StudioGAN_arXiv_2022">
-			<img src="publications/data/22_studio_gan.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis</h4>
-			<p class="text-muted">
-				MinGuk Kang, Joonghyuk Shin, and <b>Jaesik Park</b>.
-				<em>2206.09479 (arXiv), 2022</em>
-				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2206.09479" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_StudioGAN_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Kang_StudioGAN_arXiv_2022_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kang_StudioGAN_arXiv_2022_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kang_StudioGAN_arXiv_2022,<br>
-							Title={StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis},<br>
-							Author={MinGuk Kang and Joonghyuk Shin and Jaesik Park},<br>
-							Journal={2206.09479 (arXiv)},<br>
 							Year={2022}<br>
 							}
 						</p>
